--- a/app_simple/css/ipo_service.css
+++ b/app_simple/css/ipo_service.css
@@ -475,15 +475,20 @@ div.ipo_item_list {background-color:#fff; border-radius:6px; overflow:hidden; bo
 .intro_wrap .intro_content .intro_sub_content {margin-top:40px;}
 .intro_wrap .intro_content .intro_sub_content + .intro_sub_content {margin-top:48px;}
 .intro_wrap .intro_content .intro_sub_content div.tit strong {display:inline-block; font-size:22px; line-height:32px; font-weight:bold;}
-.intro_wrap .intro_content .intro_sub_content div.tit strong span {color:#2677FF;}
+.intro_wrap .intro_content .intro_sub_content div.tit strong span {color:#6250FF;}
 .intro_wrap .intro_content .intro_sub_content div.tit > span {display:inline-block; font-size:12px; line-height:18px;}
-.intro_wrap .intro_content .intro_sub_content .intro_sub_group {position:relative; margin-top:16px;}
-.intro_wrap .intro_content .intro_sub_content .intro_sub_group + .intro_sub_group {margin-top:40px;}
+.intro_wrap .intro_content .intro_sub_content .intro_sub_group {position:relative; margin-top:40px;}
+/* .intro_wrap .intro_content .intro_sub_content .intro_sub_group + .intro_sub_group {margin-top:40px;} */
 .intro_wrap .intro_content .intro_sub_content .intro_sub_group div.sub_tit {color:var(--text-basic-default); font-size:18px; line-height:26px; font-weight:500;}
 .intro_wrap .intro_content .intro_sub_content .intro_sub_group div.sub_tit em {position:relative;}
 .intro_wrap .intro_content .intro_sub_content .intro_sub_group div.sub_tit em::before {content:""; display:block; position:absolute; bottom:2px; left:0; width:100%; height:50%; background-color:#CAE6FF; z-index:0;}
 .intro_wrap .intro_content .intro_sub_content .intro_sub_group div.sub_tit em span {position:relative;}
+.intro_wrap .intro_content .intro_sub_content .intro_sub_group div.sub_tit i {display:inline-block; width:28px; height:18px; margin-left:6px; border-radius:4px; background-color:#F0F2F4; color:#666666; font-size:11px; line-height:16px; font-style:normal; text-align:center; vertical-align:middle;}
 .intro_wrap .intro_content .intro_sub_content .intro_sub_group div.img {position:absolute; top:0; right:0; width:72px; height:72px;}
+
+.intro_wrap .intro_content .intro_sub_content .price {display:inline-flex; align-items:center; gap:0 4px; margin-top:12px; padding:6px 12px; border-radius:20px; background-color:#F0F2F4;}
+.intro_wrap .intro_content .intro_sub_content .price span.ico {display:inline-block; width:16px; min-width:16px; line-height:1em;}
+.intro_wrap .intro_content .intro_sub_content .price span.txt {display:inline-block; color:#FF3A4A; font-size:12px; line-height:18px; font-weight:500;}
 
 .intro_wrap .intro_guide {padding:32px 20px 48px; background-color:#f5f5f5;}
 .intro_wrap .intro_guide .intro_guide_tit {color:var(--text-basic-discription); font-size:12px; line-height:18px; font-weight:bold;}
