--- a/app/css/ipo_service.css
+++ b/app/css/ipo_service.css
@@ -469,10 +469,10 @@ div.ipo_item_list {background-color:#fff; border-radius:6px; overflow:hidden; bo
 
 
 /* 공모주 정보 인트로 */
-.intro_wrap {color:#222;}
-.intro_wrap p {margin-top:12px; color:var(--text-basic-discription); font-size:12px; line-height:18px; letter-spacing:-0.03em;}
+.intro_wrap {color:#222; letter-spacing:-0.04em;}
+.intro_wrap p {margin-top:12px; color:#505050; font-size:12px; line-height:18px; letter-spacing:-0.03em;}
 .intro_wrap .intro_content {padding:16px 20px 48px;}
-.intro_wrap .intro_content .intro_top .intro_tit {color:var(--text-basic-default); font-size:22px; line-height:32px; font-weight:700;}
+.intro_wrap .intro_content .intro_top .intro_tit {color:#222; font-size:22px; line-height:32px; font-weight:700;}
 .intro_wrap .intro_content .intro_top div.img {margin-top:12px; border-radius:18px; overflow:hidden;}
 
 .intro_wrap .intro_content .intro_sub_content {margin-top:40px;}
@@ -482,7 +482,7 @@ div.ipo_item_list {background-color:#fff; border-radius:6px; overflow:hidden; bo
 .intro_wrap .intro_content .intro_sub_content div.tit > span {display:inline-block; font-size:12px; line-height:18px;}
 .intro_wrap .intro_content .intro_sub_content .intro_sub_group {position:relative; margin-top:40px;}
 /* .intro_wrap .intro_content .intro_sub_content .intro_sub_group + .intro_sub_group {margin-top:40px;} */
-.intro_wrap .intro_content .intro_sub_content .intro_sub_group div.sub_tit {color:var(--text-basic-default); font-size:18px; line-height:26px; font-weight:500;}
+.intro_wrap .intro_content .intro_sub_content .intro_sub_group div.sub_tit {color:#222; font-size:18px; line-height:26px; font-weight:500;}
 .intro_wrap .intro_content .intro_sub_content .intro_sub_group div.sub_tit em {position:relative;}
 .intro_wrap .intro_content .intro_sub_content .intro_sub_group div.sub_tit em::before {content:""; display:block; position:absolute; bottom:2px; left:0; width:100%; height:50%; background-color:#CAE6FF; z-index:0;}
 .intro_wrap .intro_content .intro_sub_content .intro_sub_group div.sub_tit em span {position:relative;}
@@ -490,13 +490,14 @@ div.ipo_item_list {background-color:#fff; border-radius:6px; overflow:hidden; bo
 .intro_wrap .intro_content .intro_sub_content .intro_sub_group div.img {position:absolute; top:0; right:0; width:72px; height:72px;}
 
 .intro_wrap .intro_content .intro_sub_content .price {display:inline-flex; align-items:center; gap:0 4px; margin-top:12px; padding:6px 12px; border-radius:20px; background-color:#F0F2F4;}
-.intro_wrap .intro_content .intro_sub_content .price span.ico {display:inline-block; width:16px; min-width:16px; line-height:1em;}
-.intro_wrap .intro_content .intro_sub_content .price span.txt {display:inline-block; color:#FF3A4A; font-size:12px; line-height:18px; font-weight:500;}
+.intro_wrap .intro_content .intro_sub_content .price span.ico {display:inline-block; width:16px; min-width:16px; font-size:0; line-height:1em;}
+.intro_wrap .intro_content .intro_sub_content .price span.txt {display:inline-block; color:#FF3A4A; font-size:12px; line-height:18px; font-weight:500; letter-spacing:-0.03em;}
+.intro_wrap .intro_content .intro_sub_content .price span.txt em {font-style:normal; font-weight:700;}
 
-.intro_wrap .intro_guide {padding:32px 20px 48px; background-color:#f5f5f5;}
-.intro_wrap .intro_guide .intro_guide_tit {color:var(--text-basic-discription); font-size:12px; line-height:18px; font-weight:bold;}
+.intro_wrap .intro_guide {padding:32px 20px 48px; background-color:#F0F2F4;}
+.intro_wrap .intro_guide .intro_guide_tit {color:#505050; font-size:12px; line-height:18px; font-weight:bold;}
 .intro_wrap .intro_guide ul {margin-top:18px;}
-.intro_wrap .intro_guide ul li p {position:relative; margin-top:0; padding-left:19px; color:var(--text-basic-discription); font-size:12px; line-height:18px;}
+.intro_wrap .intro_guide ul li p {position:relative; margin-top:0; padding-left:19px; color:#505050; font-size:12px; line-height:18px;}
 .intro_wrap .intro_guide ul li p::before {content:"·"; display:block; position:absolute; top:0; left:8px; color:inherit; font-size:13px; line-height:inherit; font-weight:bold;}
 
 .intro_wrap .intro_footer {position:-webkit-sticky; position:sticky; bottom:0; left:0; z-index:10; padding:20px 20px 80px 20px; background-color:#fff;}
